Fix up server initialization.

--- a/sbcld.conf
+++ b/sbcld.conf
@@ -7,7 +7,7 @@ stop on shutdown
 script
 	export HOME="/sbcld"
 	echo $$ > /var/run/sbcld.pid
-	exec /usr/local/bin/sbcl --load "/sbcld/daemon-startup.lisp"
+	exec /usr/local/bin/sbcl --load "/sbcld/vendor/quicklisp" --load "/sbcld/daemon-startup.lisp"
 end script
 
 pre-start script
